--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,3 +22,10 @@ jobs:
         docker buildx build \
           --tag omarhoblos/multiarch:latest \
           --platform linux/amd64,linux/arm/v7,linux/arm64 . 
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build the image
+        run: |
+          docker buildx build --push \
+          --tag omarhoblos/multiarch:latest \
+          --platform linux/amd64,linux/arm/v7,linux/arm64 . 
