--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -15,10 +15,15 @@ jobs:
       - name: install buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          version: latest
       - name: swiss_app
         run: |
           docker buildx build \
           --tag omarhoblos/swiss-on-fhir:latest \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 . 
+          --platform linux/amd64,linux/arm/v7,linux/arm64 .
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build the image
+        run: |
+          docker buildx build --push \
+            --tag omarhoblos/swiss-on-fhir:latest \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 .
