fixed issue with docker script not building image properly due to missing 'as base' command, updated angular.json, docker yaml files, updated target ES to ES2020, updated README with clearer instructions

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: install buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
-      - name: swiss_app
+      - name: Building Swiss on FHIR
         run: |
           docker buildx build \
           --tag omarhoblos/swiss-on-fhir:latest \
