--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiss-on-fhir",
-  "version": "1.4.0",
+  "version": "1.5.0-ALPHA",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
