complete refactor of OIDC Library, added new logging details, code cleanup for unused functions, removed unused UI elements, added countdown variable to inform user of minutes left for token validity, added new tsconfig path aliases, version bump to 2.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,14 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@src/*": [
+        "./*"
+      ],
       "@app/*": [
         "src/app/*"
+      ],
+      "@guards/*": [
+        "src/app/_guards/*"
       ],
       "@service/*": [
         "src/app/service/*"
