--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiss-on-fhir",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -25,7 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "angular-oauth2-oidc": "^13.0.1",
+    "angular-auth-oidc-client": "^14.0.0",
+    "dayjs": "^1.11.2",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
