--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiss-on-fhir",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "angular-oauth2-oidc": "^13.0.1",
     "jwt-decode": "^3.1.2",
+    "ngx-json-viewer": "^3.1.0",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
