--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           docker buildx build \
           --tag omarhoblos/swiss-on-fhir:latest \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 .
+          --platform linux/amd64,linux/arm64 .
