testing out new docker build text yaml

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -16,5 +16,4 @@ jobs:
       - name: Building Swiss on FHIR
         run: |
           docker buildx build \
-          --tag omarhoblos/swiss-on-fhir:latest \
-          --platform linux/amd64,linux/arm64 .
+          --tag omarhoblos/swiss-on-fhir:latest 
