--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+      - name: Install python3
+        run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y python3
+      - name: Test python3
+        run: python3 --version
       - name: Inspect builder
         run: |
           echo "Name:      ${{ steps.buildx.outputs.name }}"
