--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -16,7 +16,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
       - name: Install python3
-        run:  apt update && DEBIAN_FRONTEND=noninteractive  apt install -y python3 make g++
+        run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y python3 make g++
       - name: Test python3
         run: python3 --version
       - run: npm install sass node-sass
