--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -15,11 +15,9 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-      - name: Install python3
-        run: sudo apt update && DEBIAN_FRONTEND=noninteractive sudo apt install -y python3 make g++
-      - name: Test python3
-        run: python3 --version
-      - run: npm install sass node-sass
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
       - name: Inspect builder
         run: |
           echo "Name:      ${{ steps.buildx.outputs.name }}"
