--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+      - name: Check Python python-version
+        run: python --version
       # - name: Python setup
       #   uses: actions/setup-python@v4
       #   with:
