--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -14,6 +14,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
+        with:
+          install: true
         uses: docker/setup-buildx-action@v2
       - name: Check Python version
         run: python --version
