--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -28,4 +28,5 @@ jobs:
         run: |
           docker build \
           --tag omarhoblos/swiss-on-fhir:latest \
-          --platform linux/amd64,linux/arm64 .
+          --platform linux/amd64,linux/arm/v7,linux/arm64 .
+
