--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ LOGOUT_URI='http://localhost:9300/logout?cb=none&revoke=token&revoke=token_refre
 CLIENT_ID=swiss
 # Enable if you're using a client secret, skip otherwise
 CLIENT_SECRET=secrettest
+AUDIENCE=http://localhost:8001
 SCOPES=fhirUser offline_access launch/patient openid patient/*.read patient/*.write
 ENABLE_HTTPS=false
 SKIP_ISSUER_CHECK=false
