--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": ["dayjs"],
+            "allowedCommonJsDependencies": [
+              "dayjs"
+            ],
             "outputPath": "dist/swiss_app",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -128,5 +130,13 @@
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   }
 }
